Burak Sandbox/force-app/main/default/objects/Account/fields/Access_Package__c.field-meta.xml
<CustomField>
    <fullName>Access_Package__c</fullName>
    <label>Access Package</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>free</fullName>
                <default>true</default>
                <label>free</label>
            </value>
            <value>
                <fullName>leadGen</fullName>
            </value>
            <value>
                <fullName>verified</fullName>
            </value>
            <value>
                <fullName>premium</fullName>
            </value>
            <value>
                <fullName>trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>