Burak Sandbox/force-app/main/default/objects/Account/fields/Access_Package_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Access_Package_ReadOnly__c</fullName>
    <formula>TEXT(Access_Package__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Access Package</label>
    <type>Text</type>
</CustomField>