Burak Sandbox/force-app/main/default/objects/Account/fields/Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup__c</fullName>
    <formula>BillingCity + &quot;|&quot;+ Admin_ID__c +&quot;|&quot;+ Record_Type_Emoji__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Lookup</label>
    <type>Text</type>
</CustomField>