Burak Sandbox/force-app/main/default/objects/Account/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>HYPERLINK( $Label.Server_URL &amp;&quot;lightning/r/Account/&quot; &amp;Id &amp;&quot;/view&quot;,  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Link</label>
    <type>Text</type>
</CustomField>