Burak Sandbox/force-app/main/default/objects/Account/fields/Account_Owner_String__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_String__c</fullName>
    <formula>Owner.FirstName  &amp;&quot; &quot;&amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner String</label>
    <type>Text</type>
</CustomField>