Burak Sandbox/force-app/main/default/objects/Account/fields/Account_Referral__c.field-meta.xml
<CustomField>
    <fullName>Account_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Referral</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>