Burak Sandbox/force-app/main/default/objects/Account/fields/Account_Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Referral_ID__c</fullName>
    <description>ID of the accout referral</description>
    <label>Account Referral ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>