Burak Sandbox/force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Active Buyer</fullName>
            </value>
            <value>
                <fullName>Non Active Buyer</fullName>
            </value>
            <value>
                <fullName>Hard Churn</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>New / Undiscovered</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Active Outreach</fullName>
            </value>
            <value>
                <fullName>Decision Maker Reached</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Partnership Execution</fullName>
            </value>
            <value>
                <fullName>Active &amp; Revenue Generating</fullName>
            </value>
            <value>
                <fullName>Activated / Revenue Generation</fullName>
            </value>
            <value>
                <fullName>End of Partnership</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Revisit Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>