Burak Sandbox/force-app/main/default/objects/Account/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <description>Market Intelligence fills this field with Account Tiering so that I as an Account Manager can create reports and trigger tasks to manage my outreach better.</description>
    <label>Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver GMV</fullName>
            </value>
            <value>
                <fullName>Silver Engagement</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Non Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>