Burak Sandbox/force-app/main/default/objects/Account/fields/AccountReferralName__c.field-meta.xml
<CustomField>
    <fullName>AccountReferralName__c</fullName>
    <formula>Account_Referral__r.Name</formula>
    <label>Account Referral Name</label>
    <type>Text</type>
</CustomField>