Burak Sandbox/force-app/main/default/objects/Account/fields/ActionRevisitDisqualify__c.field-meta.xml
<CustomField>
    <fullName>ActionRevisitDisqualify__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revisit Later</fullName>
            </value>
            <value>
                <fullName>Disqualify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>