Burak Sandbox/force-app/main/default/objects/Account/fields/ActivationStatus__c.field-meta.xml
<CustomField>
    <fullName>ActivationStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activation Status</label>
    <type>Checkbox</type>
</CustomField>