Burak Sandbox/force-app/main/default/objects/Account/fields/ActivationStatusVisualisation__c.field-meta.xml
<CustomField>
    <fullName>ActivationStatusVisualisation__c</fullName>
    <formula>IF(  ActivationStatus__c  =true,&quot;🟢&quot;,&quot;🔴&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation Status</label>
    <type>Text</type>
</CustomField>