Burak Sandbox/force-app/main/default/objects/Account/fields/Active_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_Account_Owner__c</fullName>
    <formula>IF(
 Owner.IsActive = True, 
 True, 
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Account Owner</label>
    <type>Checkbox</type>
</CustomField>