Burak Sandbox/force-app/main/default/objects/Account/fields/Add_New_Referral__c.field-meta.xml
<CustomField>
    <fullName>Add_New_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add New Referral</label>
    <type>Checkbox</type>
</CustomField>