Burak Sandbox/force-app/main/default/objects/Account/fields/Admin_Entity_Link__c.field-meta.xml
<CustomField>
    <fullName>Admin_Entity_Link__c</fullName>
    <formula>IF(
NOT(ISBLANK( Admin_ID__c)),
HYPERLINK(
&quot;https://admin.choco.com/&quot;+IF(RecordType.Name = &quot;Buyer&quot;, &quot;buyers&quot;, &quot;supplier&quot;)+&quot;?search=&quot;&amp;Admin_ID__c,
&quot;Open Admin Entity&quot;
),
HYPERLINK(
&quot;https://admin.choco.com/&quot;+IF(RecordType.Name = &quot;Buyer&quot;, &quot;buyers&quot;, &quot;supplier&quot;)+&quot;?search=&quot;&amp; Name,
&quot;Find Admin Id&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Entity Link</label>
    <type>Text</type>
</CustomField>