Burak Sandbox/force-app/main/default/objects/Account/fields/Admin_ID__c.field-meta.xml
<CustomField>
    <fullName>Admin_ID__c</fullName>
    <description>ID of the lead/account on Admin</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the lead/account on Admin</inlineHelpText>
    <label>Admin ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>