Burak Sandbox/force-app/main/default/objects/Account/fields/admin_uuid__c.field-meta.xml
<CustomField>
    <fullName>admin_uuid__c</fullName>
    <externalId>true</externalId>
    <label>admin-uuid</label>
    <length>40</length>
    <type>Text</type>
</CustomField>