Burak Sandbox/force-app/main/default/objects/Account/fields/Annual_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Range__c</fullName>
    <description>This comes from ZoomInfo and represents their estimate of the firm&apos;s annual revenue range</description>
    <label>Annual Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under $500,000</fullName>
            </value>
            <value>
                <fullName>$500,000 - $1 mil.</fullName>
            </value>
            <value>
                <fullName>$1 mil. - $5 mil.</fullName>
            </value>
            <value>
                <fullName>$5 mil. - $10 mil.</fullName>
            </value>
            <value>
                <fullName>$10 mil. - $25 mil.</fullName>
            </value>
            <value>
                <fullName>$25 mil. - $50 mil.</fullName>
            </value>
            <value>
                <fullName>$50 mil. - $100 mil.</fullName>
            </value>
            <value>
                <fullName>$100 mil. - $250 mil.</fullName>
            </value>
            <value>
                <fullName>$250 mil. - $500 mil.</fullName>
            </value>
            <value>
                <fullName>$500 mil. - $1 bil.</fullName>
            </value>
            <value>
                <fullName>$1 bil. - $5 bil.</fullName>
            </value>
            <value>
                <fullName>Over $5 bil.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>