Burak Sandbox/force-app/main/default/objects/Account/fields/App_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>App_Conversion_Date__c</fullName>
    <label>App Conversion Date</label>
    <type>Date</type>
</CustomField>