Burak Sandbox/force-app/main/default/objects/Account/fields/App_First_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>App_First_Session_Date__c</fullName>
    <label>App First Session Date</label>
    <type>Date</type>
</CustomField>