Burak Sandbox/force-app/main/default/objects/Account/fields/App_Last_Key_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>App_Last_Key_Event_Date__c</fullName>
    <label>App Last Key Event Date</label>
    <type>Date</type>
</CustomField>