Burak Sandbox/force-app/main/default/objects/Account/fields/App_Total_Key_Events__c.field-meta.xml
<CustomField>
    <fullName>App_Total_Key_Events__c</fullName>
    <label>App Total Key Events</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>