Burak Sandbox/force-app/main/default/objects/Account/fields/App_Total_Sessions__c.field-meta.xml
<CustomField>
    <fullName>App_Total_Sessions__c</fullName>
    <label>App Total Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>