Burak Sandbox/force-app/main/default/objects/Account/fields/App_Usage_Status__c.field-meta.xml
<CustomField>
    <fullName>App_Usage_Status__c</fullName>
    <label>App Usage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Active</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>