Burak Sandbox/force-app/main/default/objects/Account/fields/Associated_Domains__c.field-meta.xml
<CustomField>
    <fullName>Associated_Domains__c</fullName>
    <label>Associated Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>