Burak Sandbox/force-app/main/default/objects/Account/fields/Assortment__c.field-meta.xml
<CustomField>
    <fullName>Assortment__c</fullName>
    <label>Assortment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baked Goods</fullName>
            </value>
            <value>
                <fullName>Beer</fullName>
            </value>
            <value>
                <fullName>Chemicals &amp; Cleaning Supplies</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Dry Goods</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Frozen Goods</fullName>
            </value>
            <value>
                <fullName>Meat &amp; Poultry</fullName>
            </value>
            <value>
                <fullName>Non-Food</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paper &amp; Packaging</fullName>
            </value>
            <value>
                <fullName>Produce</fullName>
            </value>
            <value>
                <fullName>Seafood</fullName>
            </value>
            <value>
                <fullName>Soft Drinks</fullName>
            </value>
            <value>
                <fullName>Spirits</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Drinks</fullName>
            </value>
            <value>
                <fullName>Full Assortment &amp; Broadliner</fullName>
            </value>
            <value>
                <fullName>Full Assortment</fullName>
            </value>
            <value>
                <fullName>Speciality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>