Burak Sandbox/force-app/main/default/objects/Account/fields/Assortment_Prio__c.field-meta.xml
<CustomField>
    <fullName>Assortment_Prio__c</fullName>
    <formula>CASE( 
Assortment__c , 
&quot;Equipment&quot;,&quot;LOW&quot;, 
&quot;Non-Food&quot;,&quot;LOW&quot;,
&quot;Other&quot;,&quot;LOW&quot;,
&quot;Chemical &amp; Cleaning&quot;,&quot;LOW&quot;,
&quot;Tea&quot;,&quot;LOW&quot;,
&quot;Paper &amp; Packaging&quot;,&quot;MEDIUM&quot;,
&quot;Broadliner&quot;,&quot;TOP&quot;,
&quot;Spirits&quot;,&quot;LOW&quot;,
&quot;Wine&quot;,&quot;LOW&quot;,
&quot;Beer&quot;,&quot;MEDIUM&quot;,
&quot;Coffee&quot;,&quot;MEDIUM&quot;,
&quot;Full Assortment &amp; Broadliner&quot;,&quot;TOP&quot;,
&quot;Full Assortment&quot;,&quot;TOP&quot;,
&quot;Drinks&quot;,&quot;LOW&quot;,
&quot;Frozen Goods&quot;,&quot;MEDIUM&quot;,
&quot;Specialty&quot;,&quot;MEDIUM&quot;,
&quot;Speciality&quot;,&quot;MEDIUM&quot;,
&quot;Seafood&quot;,&quot;MEDIUM&quot;,
&quot;Soft Drinks&quot;,&quot;MEDIUM&quot;,
&quot;Dry Goods&quot;,&quot;MEDIUM&quot;,
&quot;Dairy&quot;,&quot;TOP&quot;,
&quot;Baked Goods&quot;,&quot;TOP&quot;,
&quot;Meat&quot;,&quot;TOP&quot;,
&quot;Meat &amp; Poultry&quot;,&quot;TOP&quot;,
&quot;Produce&quot;,&quot;TOP&quot;,
&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assortment Prio</label>
    <type>Text</type>
</CustomField>