Burak Sandbox/force-app/main/default/objects/Account/fields/Assortment_Priority__c.field-meta.xml
<CustomField>
    <fullName>Assortment_Priority__c</fullName>
    <label>Assortment Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>