Burak Sandbox/force-app/main/default/objects/Account/fields/BD_Approach__c.field-meta.xml
<CustomField>
    <fullName>BD_Approach__c</fullName>
    <inlineHelpText>1-Handover is made before chat created (not enough info to create chat)
2-Handover is made on chat created,FOM done by sales
3-Handover made on FOM, FOM done by BD
4-Handover made on FOM, FOM done by supplier</inlineHelpText>
    <label>BD Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BD_Approach</valueSetName>
    </valueSet>
</CustomField>