Burak Sandbox/force-app/main/default/objects/Account/fields/Big_Chain__c.field-meta.xml
<CustomField>
    <fullName>Big_Chain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disqualify Chain Leads</label>
    <type>Checkbox</type>
</CustomField>