Burak Sandbox/force-app/main/default/objects/Account/fields/Business_Type_New__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_New__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restaurant (fast food)</fullName>
            </value>
            <value>
                <fullName>Restaurant (standard)</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Cafe</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Delicatessen</fullName>
            </value>
            <value>
                <fullName>Nightclub</fullName>
            </value>
            <value>
                <fullName>Restaurant (fine dining)</fullName>
            </value>
            <value>
                <fullName>Restaurant (fast casual)</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Restaurant (delivery)</fullName>
            </value>
            <value>
                <fullName>Dessert</fullName>
            </value>
            <value>
                <fullName>Restaurant (modern)</fullName>
            </value>
            <value>
                <fullName>Alcohol Producer</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Bistro</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>