Burak Sandbox/force-app/main/default/objects/Account/fields/Buyer_Entity_Migration__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Entity_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyer Entity Migration</label>
    <type>Checkbox</type>
</CustomField>