Burak Sandbox/force-app/main/default/objects/Account/fields/Buyer_Pitch_Details__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Pitch_Details__c</fullName>
    <label>Buyer Pitch Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>