Burak Sandbox/force-app/main/default/objects/Account/fields/Buyer_Reason__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Reason__c</fullName>
    <label>Buyer Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed for business temporarily</fullName>
                <label>Temporarily Closed (seasonal or renovation etc)</label>
            </value>
            <value>
                <fullName>Closed for business permanently</fullName>
                <label>Permanently Closed</label>
            </value>
            <value>
                <fullName>User(s) who used Choco left</fullName>
                <label>User(s) who used Choco left*</label>
            </value>
            <value>
                <fullName>New Management don&apos;t want to use Choco</fullName>
            </value>
            <value>
                <fullName>Supplier Pushback</fullName>
            </value>
            <value>
                <fullName>Non-target user (few orders, big chain, no deliveries, etc)</fullName>
            </value>
            <value>
                <fullName>Other Tools: Supplier systems</fullName>
            </value>
            <value>
                <fullName>Other Tools: Buyer’s own system</fullName>
            </value>
            <value>
                <fullName>Poor onboarding</fullName>
            </value>
            <value>
                <fullName>User/DM doesnt trust Choco</fullName>
                <label>Doesn&apos;t trust Choco</label>
            </value>
            <value>
                <fullName>User/DM missing personal contact/negotiation with Supplier</fullName>
                <label>Missing personal contact/negotiation with Supplier</label>
            </value>
            <value>
                <fullName>Buyer Reasons - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>