Burak Sandbox/force-app/main/default/objects/Account/fields/Buyer_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type_Category__c</fullName>
    <label>Buyer Type Category OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>