Burak Sandbox/force-app/main/default/objects/Account/fields/Buyer_Type_Category_New__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type_Category_New__c</fullName>
    <label>Buyer Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Type_New__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Gay Bar</fullName>
            </value>
            <value>
                <fullName>Modern</fullName>
            </value>
            <value>
                <fullName>Dry Goods</fullName>
            </value>
            <value>
                <fullName>Ice Cream</fullName>
            </value>
            <value>
                <fullName>Independent Hotel</fullName>
            </value>
            <value>
                <fullName>Elderly home</fullName>
            </value>
            <value>
                <fullName>Comedy Club</fullName>
            </value>
            <value>
                <fullName>Distilery</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Mediterranean</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Dive</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Cake</fullName>
            </value>
            <value>
                <fullName>Hotel chain</fullName>
            </value>
            <value>
                <fullName>Prison</fullName>
            </value>
            <value>
                <fullName>Adult Club</fullName>
            </value>
            <value>
                <fullName>Brewery</fullName>
            </value>
            <value>
                <fullName>Meat</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Confectionary</fullName>
            </value>
            <value>
                <fullName>Wine</fullName>
            </value>
            <value>
                <fullName>Coffee Shop</fullName>
            </value>
            <value>
                <fullName>Produce</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>