Burak Sandbox/force-app/main/default/objects/Account/fields/Buyer_Type_II__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Type_II__c</fullName>
    <label>Buyer Type Google</label>
    <type>TextArea</type>
</CustomField>