Burak Sandbox/force-app/main/default/objects/Account/fields/Capacities_available__c.field-meta.xml
<CustomField>
    <fullName>Capacities_available__c</fullName>
    <label>Capacities available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>