Burak Sandbox/force-app/main/default/objects/Account/fields/Catalogue_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_Last_Updated__c</fullName>
    <label>Catalogue Last Updated</label>
    <type>Date</type>
</CustomField>