Burak Sandbox/force-app/main/default/objects/Account/fields/Chain__c.field-meta.xml
<CustomField>
    <fullName>Chain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chain</label>
    <referenceTo>Chain__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>