Burak Sandbox/force-app/main/default/objects/Account/fields/Chain_Buyer_Type__c.field-meta.xml
<CustomField>
    <fullName>Chain_Buyer_Type__c</fullName>
    <label>Chain Buyer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>