Burak Sandbox/force-app/main/default/objects/Account/fields/Chat_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Chat_Created_Date__c</fullName>
    <label>Chat Created Date</label>
    <type>DateTime</type>
</CustomField>