Burak Sandbox/force-app/main/default/objects/Account/fields/Chat_Performance__c.field-meta.xml
<CustomField>
    <fullName>Chat_Performance__c</fullName>
    <description>Market Intelligence fills this field with Account Tiering so that I as an Account Manager can create reports and trigger tasks to manage my outreach better.</description>
    <label>Chat Performance Value</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>