Burak Sandbox/force-app/main/default/objects/Account/fields/Chat_Performance_Emoji__c.field-meta.xml
<CustomField>
    <fullName>Chat_Performance_Emoji__c</fullName>
    <formula>IF(TEXT(Account_Tier__c)=&quot;&quot;|| TEXT(Account_Tier__c)=&quot;In Progress&quot; || TEXT(Account_Tier__c)=&quot;Non Active&quot; ,&quot;&quot;,
CASE( Chat_Performance__c ,
0, IMAGE(&quot;/resource/red_Emoji&quot;, &quot;red&quot;,20,20),
1, IMAGE(&quot;/resource/green_Emoji&quot;, &quot;green&quot;,20,20),
&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Chats per Buyer Performance</label>
    <type>Text</type>
</CustomField>