Burak Sandbox/force-app/main/default/objects/Account/fields/Child_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Child_Accounts__c</fullName>
    <label>Child Accounts</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>