Burak Sandbox/force-app/main/default/objects/Account/fields/Child_Buyer_Link_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_Buyer_Link_Date__c</fullName>
    <label>Child Buyer Link Date</label>
    <type>DateTime</type>
</CustomField>