Burak Sandbox/force-app/main/default/objects/Account/fields/Child_Leads__c.field-meta.xml
<CustomField>
    <fullName>Child_Leads__c</fullName>
    <label>Child Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>