Burak Sandbox/force-app/main/default/objects/Account/fields/Choco_Buyer_Phone_Nr__c.field-meta.xml
<CustomField>
    <fullName>Choco_Buyer_Phone_Nr__c</fullName>
    <inlineHelpText>The phone number with which the account orders via Choco. 
Please start with +, separate multiple IDs with a comma, no spaces allowed</inlineHelpText>
    <label>Choco Buyer Phone Nr</label>
    <type>TextArea</type>
</CustomField>