Burak Sandbox/force-app/main/default/objects/Account/fields/Choco_Champion__c.field-meta.xml
<CustomField>
    <fullName>Choco_Champion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Choco Champion</label>
    <type>Checkbox</type>
</CustomField>