Burak Sandbox/force-app/main/default/objects/Account/fields/Choco_Supplier_Phone_Nr__c.field-meta.xml
<CustomField>
    <fullName>Choco_Supplier_Phone_Nr__c</fullName>
    <inlineHelpText>The supplier&apos;s phone number on admin.
Please start with +, separate multiple IDs with a comma, no spaces allowed</inlineHelpText>
    <label>Choco Supplier Phone Nr</label>
    <type>TextArea</type>
</CustomField>