Burak Sandbox/force-app/main/default/objects/Account/fields/Choco_Web_Usage_Status__c.field-meta.xml
<CustomField>
    <fullName>Choco_Web_Usage_Status__c</fullName>
    <inlineHelpText>This is a field updated by Salesforce Admins. Please message directly with any questions!</inlineHelpText>
    <label>Choco Web Usage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Active</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>