Burak Sandbox/force-app/main/default/objects/Account/fields/ChocoWeb_First_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>ChocoWeb_First_Session_Date__c</fullName>
    <label>Web First Session Date</label>
    <type>Date</type>
</CustomField>